--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   background-size: cover;
   height: 50px;
   width: 100%; 
-   
+ 
 }
 
 .border {
@@ -167,5 +167,132 @@ align-items: flex-end;
 
 .hero-msg a {
   color: #007185
+
+}
+
+/* shop section */
+.shop-section{
+display: flex;
+flex-wrap: wrap;
+justify-content: space-evenly;
+background-color: #e2e7e6;
+}
+
+.box {
+  
+  height:450px;
+  width: 23%;
+  background-color: white;
+  padding: 20px 0px 15px;
+  margin-top: 15px;
+}
+
+.box-img {
+  height: 370px;
+  background-size: cover;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.box-content {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.box-content a {
+  color: #007185;
+  
+}
+
+.box-content p {
+  color: #007185;
+  
+}
+
+
+/* footer */
+
+footer {
+    margin-top: 15px;
+}
+
+.footerpanel1 {
+   background-color: #37475a;
+   color: white;
+   height: 50px;
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.85rem;
+}
+
+.footerpanel2{
+  background-color: #222f3d;
+  color: white;
+  height: 300px;
+  display:flex;
+  justify-content: space-evenly;
+}
+
+ul {
+  margin-top: 20px;
+
+}
+
+ul a {
+  display: block;                           
+  font-size: 0.85rem;
+  margin-top: 10px;
+  color: #dddddd;
+}
+.footpanel3{
+ background-color: #222f3d; 
+border-top: 0.5px solid white;
+height: 70px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.logo {
+  background-image: url("amazon_logo.png");
+  background-size:  cover;
+  height: 50px;
+  width: 100px
+}
+
+.footpanel4 {
+  background-color: #0f1111;
+  color: white;
+ height: 70px;
+padding-top: 25px;
+ text-align: center; 
+}
+
+.pages {
+  font-size: 0.9rem;
+}
+
+.copyright {
+  font-size: 0.8rem;
+
+}
+
+@media only screen and  (max-width:720){
+ .navbar{
+  width: 100%;
+ }
+ .shop-section{
+  width: 100%;
+ }
+ .panel {
+  width:100%;
+ }
+ .box-img{
+  width: 50%;
+  height: 50%; 
+}
+.footer-all{
+  width: 100%;
+}
 
 }
