--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ margin-left: 15px;
 
 .panel-option{
   width:70%;
-  font-weigth: 0.85rem;
+  font-size: 0.85rem;
 }
 .panel-deals {
   font-size: 0.9rem;
