--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ flex-direction: column;  /* Ensures box content stacks vertically */
   .box-img{
     height: 600px; 
     width: 100%;
-    
+    align-items: center;
 }   
 }
 @media only screen and (max-width: 800px) {
