--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ flex-direction: column;  /* Ensures box content stacks vertically */
    
   }
   .box-img{
-    height: 600px; 
+    height: 50%; 
     width: 100%;
     align-items: center;
 }   
@@ -323,3 +323,32 @@ flex-direction: column;  /* Ensures box content stacks vertically */
   }
 
  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
