--- a/style2.css
+++ b/style2.css
@@ -357,7 +357,12 @@ padding-top: 25px;
 
 
 
-@media only screen and (max-width: 460px) {
+@media only screen and (max-width: 460px ) {
+  *{
+    margin: 0px;
+    padding: 0%;
+  }
+  
  
 .navbar {
   height: 60px;
@@ -492,8 +497,11 @@ margin-left: 10px;
 .panel-deals {
   font-size: 0.64rem;
   font-weight: 700;
-  position: relative;
+  padding-left: 20%;
   left: 10vw;
+ 
+  
+
 
 }
 
@@ -523,10 +531,6 @@ margin-left: 10px;
     color: #007185
 
 }
-
-
-
-
 
 
 }
